doraemon/ai-creator/manifests/app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: go-app
  labels:
    app: go-app
spec:
  containers:
    - name: go-app
      image: weedge/ai-creator
      ports:
        - containerPort: 8123
      livenessProbe: # To check the health of the Pod
        httpGet:
          path: /health
          port: 8123
          scheme: HTTP
        initialDelaySeconds: 5
        periodSeconds: 15
        timeoutSeconds: 5
      readinessProbe: # To check if the Pod is ready to serve traffic or not
        httpGet:
          path: /readiness
          port: 8123
          scheme: HTTP
        initialDelaySeconds: 5
        timeoutSeconds: 1
