doraemon/ai-creator/manifests/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ai-creator-ingress
  namespace: doraemon
spec:
  rules:
    - host: <NODE_BALANCER_URL>
      http:
        paths:
          - path: /
            backend:
              serviceName: ai-creator-service
              servicePort: 80
